# matchkit

./: CHANGELOG.md  Cargo.toml  INTERNAL_SPEC.md  README.md
.github/workflows/: ci.yml
benches/: batch_bench.rs  matchset_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_batch.rs  fuzz_match.rs  fuzz_matchset.rs
src/: error.rs  lib.rs  match_set.rs  match_type.rs  matcher.rs
tests/: all.rs  break_it.rs  campaign_s_perf_match.rs  campaign_s_proptest_03.rs  campaign_s_proptest_03_ext.proptest-regressions  campaign_s_proptest_03_ext.rs  campaign_s_proptest_03_ext_min.rs  campaign_s_proptest_03_ext_partial.rs  legendary.rs  test_matchkit.rs
tests/adversarial/: break_it.rs  mod.rs
tests/break_it/: targeted_regressions.rs
tests/concurrent/: mod.rs
tests/integration/: fault_injection.rs  mod.rs
tests/property/: mod.rs
tests/regression/: mod.rs
tests/unit/: all.rs  legendary.rs  mod.rs  test_matchkit.rs
