[package]
name = "matchkit"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Corum Collective LLC <contact@santh.io>"]
repository = "https://github.com/santhsecurity/matchkit"
homepage = "https://github.com/santhsecurity/matchkit"
documentation = "https://docs.rs/matchkit"
description = "Vocabulary types for multi-pattern matching — Match struct, Matcher trait, shared errors"
readme = "README.md"
keywords = ["pattern-matching", "match", "gpu", "trait", "vocabulary"]
categories = ["algorithms", "text-processing"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE", "CHANGELOG.md"]
exclude = ["Cargo.lock"]

[dependencies]
async-trait = "0.1"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
proptest = "1"
futures = "0.3.32"
memoffset = "0.9"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }

[[bench]]
name = "matchset_bench"
harness = false
