[package]
name = "matchkit"
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Corum Collective LLC <contact@santh.io>"]
repository = "https://github.com/santhsecurity/Santh"
homepage = "https://github.com/santht/matchkit"
documentation = "https://docs.rs/matchkit"
description = "Vocabulary types for multi-pattern matching — Match struct, Matcher trait, shared errors"
readme = "README.md"
keywords = ["pattern-matching", "match", "gpu", "trait", "vocabulary"]
categories = ["algorithms", "text-processing"]
include = ["src/**", "Cargo.toml", "README.md", "CHANGELOG.md", "LICENSE"]

[dependencies]
async-trait = "0.1"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
faultkit = "0.1"
tempfile = "3"
criterion = "0.5"
proptest = "1"
futures = "0.3.32"
memoffset = "0.9"

[lints.rust]
missing_docs = "warn"


[[bench]]
name = "matchset_bench"
harness = false

[[bench]]
name = "batch_bench"
harness = false

[[test]]
name = "unit_all"
path = "tests/unit/all.rs"

[[test]]
name = "unit_legendary"
path = "tests/unit/legendary.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "unit_test_matchkit"
path = "tests/unit/test_matchkit.rs"

[[test]]
name = "adversarial_break_it"
path = "tests/adversarial/break_it.rs"

[[test]]
name = "adversarial"
path = "tests/adversarial/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "property"
path = "tests/property/mod.rs"

[[test]]
name = "campaign_s_perf_match"
path = "tests/campaign_s_perf_match.rs"

[[test]]
name = "campaign_s_proptest_03"
path = "tests/campaign_s_proptest_03.rs"

[[test]]
name = "campaign_s_proptest_03_ext"
path = "tests/campaign_s_proptest_03_ext.rs"

[[test]]
name = "campaign_s_proptest_03_ext_min"
path = "tests/campaign_s_proptest_03_ext_min.rs"

